--- a/css/style.css
+++ b/css/style.css
@@ -45,4 +45,54 @@ nav {
 .background {
     background-image: url("https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg");
     background-repeat: no-repeat;
+    min-height: 58vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: stretch;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.hero{
+    background-color: #000;
+}
+
+.image_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.imagen_segmento{
+    margin-right: 1.5rem;
+}
+
+.imagen_segmento:last-of-type {
+    margin-right: 0;
+}
+
+.imagen_segmento img{
+    width: 300px;
+}
+
+.container_hero {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.container_hero .hero {
+    width: 300px;
+}
+
+footer p {
+    text-align: left;
+    margin-left: 20px;
 }
